--- a/components/Utils/translations/uk.json
+++ b/components/Utils/translations/uk.json
@@ -316,5 +316,121 @@
     { "id": 4, "image": "../../image/gallery/gallery_spa_4.png" },
     { "id": 5, "image": "../../image/gallery/gallery_spa_5.png" },
     { "id": 6, "image": "../../image/gallery/gallery_spa_6.png" }
+  ],
+  "Massages": ["Масажі", "Пілінги", "Пропарювання та обгортання", "Церемонії"],
+  "Peelings": ["Масажі", "Пілінги", "Пропарювання та обгортання", "Церемонії"],
+  "Steaming and Wrapping": ["Масажі", "Пілінги", "Пропарювання та обгортання", "Церемонії"],
+  "Ceremonies": ["Масажі", "Пілінги", "Пропарювання та обгортання", "Церемонії"],
+  "typeMassages": [
+    {
+      "id": 1,
+      "name": "Класичний масаж",
+      "price": "2500/3400 грн",
+      "description": "Універсальна техніка для розслаблення м'язів, зняття напруження та покращення кровообігу. Ідеально підходить для тіла, що шукає баланс між фізичним і емоційним станом. Включає використання різних методів мануального впливу на м'язи і тканини тіла.",
+      "duration": "Тривалість: 60/90 хв",
+      "image": "../../image/type_categories/classic_massage.png"
+    },
+    {
+      "id": 2,
+      "name": "Тайський масаж",
+      "price": "2600/3500 грн",
+      "description": "Це традиційна техніка масажу, яка поєднує в собі елементи акупунктури, йоги, гнучкого масажу м'язів та рефлексотерапії. Цей масаж спрямований на відновлення енергетичного балансу в тілі, зняття напруги та поліпшення гнучкості.",
+      "duration": "Тривалість: 60/90 хв",
+      "image": "../../image/type_categories/thai_massage.png"
+    },
+    {
+      "id": 3,
+      "name": "Спортивний масаж",
+      "price": "2600/3800 грн",
+      "description": "Спеціалізована форма масажу, розроблена для спортсменів та осіб, що ведуть активний спосіб життя. Він спрямований на підготовку тіла до фізичних навантажень, підтримання фізичної форми, попередження травм та прискорення відновлення після тренувань.",
+      "duration": "Тривалість: 90/120 хв",
+      "image": "../../image/type_categories/sports_massage.png"
+    },
+    {
+      "id": 4,
+      "name": "Ароматерапевтичний масаж",
+      "price": "2300/3300 грн",
+      "description": "Це метод масажу, при якому використовуються ефірні олії для максимального розслаблення та терапевтичного ефекту. Ці олії підбираються індивідуально, допомагають зняти стрес, покращити настрій та загальний стан організму.",
+      "duration": "Тривалість: 60/90 хв",
+      "image": "../../image/type_categories/aromatherapy_massage.png"
+    }
+  ],
+    "typePeelings": [
+    {
+      "id": 1,
+      "name": "Цукровий пілінг",
+      "price": "2000 грн",
+      "description": "Ідеальний спосіб м'яко видалити мертві клітини шкіри та надати їй свіжого вигляду. Цукровий скраб має ніжну текстуру, яка делікатно очищує шкіру, не травмуючи її. Цей вид пілінгу підходить для всіх типів шкіри, особливо для чутливої. Цукрові кристали разом з натуральними оліями глибоко живлять та зволожують шкіру, залишаючи її гладенькою та м'якою. Після процедури шкіра стає шовковистою, пружною та має здоровий блиск.",
+      "duration": "Тривалість: 50 хв",
+      "image": "../../image/type_categories/sugar_peeling.png"
+    },
+    {
+      "id": 2,
+      "name": "Сольовий пілінг",
+      "price": "2200 грн",
+      "description": "Це потужний спосіб глибокого очищення шкіри. Сольовий скраб відмінно видаляє мертві клітини, стимулює кровообіг та сприяє загальному тонусу шкіри та організму. Сіль насичує шкіру мінералами та мікроелементами, що сприяє її живленню та покращенню текстури. Цей вид пілінгу особливо корисний для жирної, проблемної шкіри, надаючи їй відчуття свіжості та тонусу.",
+      "duration": "Тривалість: 60 хв",
+      "image": "../../image/type_categories/salt_peeling.png"
+    },
+    {
+      "id": 3,
+      "name": "Кавовий пілінг",
+      "price": "2200 грн",
+      "description": "Кавовий пілінг – це чудовий спосіб додати вашій шкірі енергії та тонусу. Кавовий скраб має антиоксидантні властивості, які допомагають боротися зі знаками старіння та запобігати пересушуванню шкіри. Кава м'яко делікатно знімає ороговілі клітини шкіри, освіжаючи та омолоджуючи її. Натуральні олії у складі скрабу глибоко живлять та зволожують шкіру, залишаючи її гладенькою, еластичною.",
+      "duration": "Тривалість: 60 хв",
+      "image": "../../image/type_categories/coffee_peeling.png"
+    }
+  ],
+  "typeSteamingWrapping": [
+    {
+      "id": 1,
+      "name": "Фінська сауна",
+      "price": "2000 грн",
+      "description": "Це спа-процедура, що сприяє глибокому очищенню пор, покращенню кровообігу, зняттю напруження та загальному оздоровленню організму. Процедура здійснюється за допомогою гарячого сухого повітря, яке створюється камінням – спеціальною піччю з розігрітими каменями. Під нагрів повітря в сауні, на камені наливають воду, яка швидко випаровується, створюючи короткочасний ефект підвищеної вологості.",
+      "duration": "Тривалість: 50 хв",
+      "image": "../../image/type_categories/finnish_sauna.png"
+    },
+    {
+      "id": 2,
+      "name": "Турецький хамам",
+      "price": "2200 грн",
+      "description": "Це традиційна лазня, що забезпечує глибоке очищення та релаксацію через поєднання високої температури та вологості. Інтенсивне скрабування з подальшим масажем всього тіла з використанням мильної піни та промивання теплим водою. Процедури в хамамі сприяють очищенню шкіри, покращенню кровообігу, розслабленню м'язів, зняттю стресу та загальному оздоровленню.",
+      "duration": "Тривалість: 60 хв",
+      "image": "../../image/type_categories/turkish_hammam.png"
+    },
+    {
+      "id": 3,
+      "name": "Шоколадне обгортання",
+      "price": "1700 грн",
+      "description": "Шоколадне обгортання – це спа-процедура, під час якої на тіло наносять свіжий шоколад. Ця процедура сприяє зволоженню шкіри, покращенню кровообігу та загальному розслабленню. Шоколадні обгортання також можуть стимулювати кровообіг і допомагати в боротьбі з целюлітом та дарує неймовірне задоволення.",
+      "duration": "Тривалість: 45 хв",
+      "image": "../../image/type_categories/chocolate_wrapping.png"
+    },
+    {
+      "id": 4,
+      "name": "Водоростеве обгортання",
+      "price": "1500 грн",
+      "description": "Водоростеве обгортання – це спа-процедура, під час якої на тіло наносять спеціальну суміш з морських водоростей, що сприяють очищенню, зволоженню та живленню шкіри. Вони багаті різними мінералами та мікроелементами, що обгортання сприяє покращенню обміну речовин, зменшенню целюліту та підвищенню еластичності шкіри.",
+      "duration": "Тривалість: 40 хв",
+      "image": "../../image/type_categories/seaweed_wrapping.png"
+    }
+  ],
+    "teaCeremonies": [
+    {
+      "id": 1,
+      "name": "Чайна церемонія",
+      "price": "2000 грн",
+      "description": "Це давнє мистецтво приготування і вживання чаю, яке сприяє внутрішньому спокою та гармонії. Під час церемонії наші майстри розкривають перед вами тонкощі традиційних методів заварювання чаю, і ви насолоджуєтесь якісним ароматом чаю.",
+      "duration": "Тривалість: 60 хв",
+      "image": "../../image/type_categories/tea_ceremony.png"
+    },
+    {
+      "id": 2,
+      "name": "Церемонія з аромамаслами",
+      "price": "2200 грн",
+      "description": "Церемонія з аромамаслами – це спа-ритуал, що використовує силу натуральних ефірних олій для покращення фізичного та емоційного стану. Під час церемонії аромамасла розпилюються у повітрі або наносяться на тіло, створюючи атмосферу спокою і гармонії.",
+      "duration": "Тривалість: 60 хв",
+      "image": "../../image/type_categories/aromatherapy_ceremony.png"
+    }
   ]
 }
